Generar interfaces per implementar Servei de Certificats de Carpeta #893
